--- a/auditionform.html
+++ b/auditionform.html
@@ -3,31 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Never Offical</title>
-        <link rel="icon" href="../images/never.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <title>Audition Form | Never Offical</title>
+        <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
         <link rel="stylesheet" href="../styling/general.css">
         <link rel="stylesheet" href="../styling/auditionform.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-        <script type="text/javascript" src="../script/auditionform.js" defer></script>
+        <script src="../script/general.js" defer></script>
+        <script src="../script/auditionform.js" defer></script>
     </head>
     <body>
-        <header>
-            <div class="logo-container">
-                <a href="index.html"><script src=""></script>
-                    <img src="../images/never.png" alt="Never" class="header-logo">
-                    <h1>Never</h1>
-                </a>
-            </div>
-            <nav>
-                <a href="index.html">about us</a>
-                <a href="members.html">members</a>
-                <a href="audition.html">audition</a>
-                <a href="contact.html">contact us</a>
-            </nav>
-        </header>
+        <header></header>
         <main>
             <form class="audition-form" method="post" enctype="text/plain">
                 <div class="form-steps">
@@ -148,21 +134,11 @@
 
                 <div class="form-control">
                     <button type="button" class="previous">Previous</button>
-                    <button type="submit" class="submit active" disabled>Apply</button>
+                    <button type="button" class="submit active" disabled hidden>Apply</button>
                     <button type="button" class="next active">Next</button>
                 </div>
             </form>
         </main>
-        <footer>
-            <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
-                <i class="fab fa-youtube"></i>
-            </a>
-        </footer>
+        <footer></footer>
     </body>
 </html>
