--- a/faq.html
+++ b/faq.html
@@ -3,35 +3,23 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Never Offical</title>
-        <link rel="icon" href="../images/never.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <title>FAQ | Never Offical</title>
+        <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
         <link rel="stylesheet" href="../styling/general.css">
         <link rel="stylesheet" href="../styling/faq.css">
+        <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+        <script src="../script/general.js" defer></script>
     </head>
     <body>
-        <header>
-            <div class="logo-container">
-                <a href="index.html">
-                    <img src="../images/never.png" alt="Never" class="header-logo">
-                    <h1>Never</h1>
-                </a>
-            </div>
-            <nav>
-                <a href="index.html">about us</a>
-                <a href="members.html">members</a>
-                <a href="audition.html">audition</a>
-                <a href="contact.html">contact us</a>
-            </nav>
-        </header>
+        <header></header>
         <main>
             <div class="faq-container">
                 <div class="faq-title">
-                    <h3>Frequently Asked Questions</h3>
-                    <p class="faq-description">Here are some helpful FAQs!</p><br>
+                    <h3 class="page-title">Frequently Asked Questions</h3>
+                    <p class="faq-description">Here are some helpful FAQs!</p>
                 </div>
+                <hr class="title-divider">
 
                 <label class="faq-question"><i>Q</i>: When and when are practices?</label>
                 <p class="faq-answer">
@@ -88,16 +76,6 @@
                 <button class="audition-button" type="button" onclick="window.location.href='auditionform.html'">Apply Now</button>
             </div>
         </main>
-        <footer>
-            <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
-                <i class="fab fa-youtube"></i>
-            </a>
-        </footer>
+        <footer></footer>
     </body>
 </html>
