--- a/index.html
+++ b/index.html
@@ -4,56 +4,37 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Never Offical</title>
-        <link rel="icon" href="../images/never.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
         <link rel="stylesheet" href="../styling/general.css">
+        <link rel="stylesheet" href="../styling/index.css">
+        <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+        <script src="../script/general.js" defer></script>
     </head>
     <body>
-        <header>
-            <div class="logo-container">
-                <a href="index.html">
-                    <img src="../images/never.png" alt="Never" class="header-logo">
-                    <h1>Never</h1>
-                </a>
-            </div>
-            <nav>
-                <a href="index.html">about us</a>
-                <a href="members.html">members</a>
-                <a href="audition.html">audition</a>
-                <a href="contact.html">contact us</a>
-            </nav>
-        </header>
+        <header></header>
         <main>
-            <p>
-                Formed in 2015, <em>Never</em> is a K-Pop cover dance performance crew based in Calgary, AB
-            </p><br>
-            <p>
-                <em>NE</em> stands "any" and <em>VER</em> means "version"
-            </p>
-            <p>
-                We come together to create "any version" of various dance performances in different styles. 
-                Just like how fast the moon phases, our dancers adapt and learn quickly 
-            </p><br>
-            <p>Check out some of our lastest cover!</p><br>
-            <div class="lastest-cover">
-                <iframe width="160" height="90" src="https://www.youtube.com/embed/UaDNQRjlJdo"
+            <div class="introductions">
+                <h3 class="page-title">About Us</h3>
+                <hr class="title-divider">
+                <p>
+                    Formed in 2015, <em>Never</em> is a K-Pop cover dance performance crew based in Calgary, AB
+                </p>
+                <p>
+                    <em>NE</em> stands "any" <br><br>
+                    <em>VER</em> means "version"<br><br>
+                    We come together to create "any version" of various dance performances in different styles. 
+                    Just like how fast the moon phases, our dancers adapt and learn quickly 
+                </p>
+                <p>Check out some of our lastest covers!</p>
+            </div>
+            <div class="iframe-container">
+                <iframe width="160" height="90" src="https://www.youtube.com/embed/3rMyNU3bGEU"
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
                 </iframe>
             </div>
         </main>
-        <footer>
-            <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
-                <i class="fab fa-youtube"></i>
-            </a>
-        </footer>
+        <footer></footer>
     </body>
 </html>
