--- a/members.html
+++ b/members.html
@@ -3,67 +3,65 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Members - Never Offical</title>
-        <link rel="icon" href="../images/never.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <title>Members | Never Offical</title>
+        <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
         <link rel="stylesheet" href="../styling/general.css">
         <link rel="stylesheet" href="../styling/members.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-        <script type="text/javascript" src="../script/members.js" defer></script>
+        <script src="../script/general.js" defer></script>
+        <script src="../script/members.js" defer></script>
     </head>
     <body>
-        <header>
-            <div class="logo-container">
-                <a href="index.html">
-                    <img src="../images/never.png" alt="Never" class="header-logo">
-                    <h1>Never</h1>
-                </a>
-            </div>
-            <nav>
-                <a href="index.html">about us</a>
-                <a href="members.html">members</a>
-                <a href="audition.html">audition</a>
-                <a href="contact.html">contact us</a>
-            </nav>
-        </header>
+        <header></header>
         <main>
-            <h3>Members</h3>
+            <h3 class="page-title">Members</h3>
+            <hr class="title-divider">
             <p>Meet our members!</p>
-            <div class="member-row">
-                <div class="member-column">
-                    <img src="../images/members/AJ.jpg">
-                    <img src="../images/members/Angelina.jpg">
-                    <img src="../images/members/Chris.jpg">
-                    <img src="../images/members/Christine.jpg">
-                    <img src="../images/members/Francine.jpg">
-                    <img src="../images/members/Hayley.jpg">
-                </div>
-                <div class="member-column">
-                    <img src="../images/members/Izzie.jpg">
-                    <img src="../images/members/Jacky.jpg">
-                    <img src="../images/members/Julia.jpg">
-                    <img src="../images/members/Justin.jpg">
-                    <img src="../images/members/Kate.jpg">
-                </div>
-                <div class="member-column">
-                    <img src="../images/members/Melody.jpg">
-                    <img src="../images/members/Mico.jpg">
-                    <img src="../images/members/Nicky.jpg">
-                    <img src="../images/members/Paolo.jpg">
-                    <img src="../images/members/Steph_D.jpg">
-                </div>
-                <div class="member-column">
-                    <img src="../images/members/Steph_W.jpg">
-                    <img src="../images/members/Tracey.jpg">
-                    <img src="../images/members/Ian.jpg">
-                    <img src="../images/members/Kyara.jpg">
-                    <img src="../images/members/Kyle.jpg">
-                </div>
+            <div class="member-container">
+                <img src="../images/members/AJ.jpg">
+                <img src="../images/members/Angelina.jpg">
+                <img src="../images/members/Chris.png">
+                <p>AJ</p>
+                <p>Angelina</p>
+                <p>Chris</p>
+                <img src="../images/members/Christine.jpg">
+                <img src="../images/members/Francine.png">
+                <img src="../images/members/Hayley.jpg">
+                <p>Christine</p>
+                <p>Francine</p>
+                <p>Hayley</p>
+                <img src="../images/members/Izzie.jpg">
+                <img src="../images/members/Jacky.png">
+                <img src="../images/members/Justin.png">
+                <p>Izzie</p>
+                <p>Jacky</p>
+                <p>Justin</p>
+                <img src="../images/members/Kate.jpg">
+                <img src="../images/members/Melody.jpg">
+                <img src="../images/members/Mico.jpg">
+                <p>Kate</p>
+                <p>Melody</p>
+                <p>Mico</p>
+                <img src="../images/members/Nicky.png">
+                <img src="../images/members/Paolo.png">
+                <img src="../images/members/Steph_D.Png">
+                <p>Nicky</p>
+                <p>Kyle T.</p>
+                <p>Stephanie D.</p>
+                <img src="../images/members/Steph_W.jpg">
+                <img src="../images/members/Tracey.jpg">
+                <img src="../images/members/Ian.png">
+                <p>Stephanie D.</p>
+                <p>Tracey</p>
+                <p>Ian</p>
+                <img src="../images/members/Kyara.jpg">
+                <img src="../images/members/Kyle.png">
+                <div></div>
+                <p>Kyara</p>
+                <p>Kyle L.</p>
             </div>
         </main>
-
         <div class="modal">
             <span class="close-modal">&times;</span>
             <div class="modal-container">
@@ -72,17 +70,7 @@
                 <div class="modal-description"></div>
             </div>
         </div>
-        
-        <footer>
-            <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
-                <i class="fab fa-youtube"></i>
-            </a>
-        </footer>
+        <div class="footer-space"></div>
+        <footer></footer>
     </body>
 </html>
