--- a/contact.html
+++ b/contact.html
@@ -3,31 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Never Offical</title>
-        <link rel="icon" href="../images/never.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js" defer></script>
+        <title>Contact Us | Never Offical</title>
+        <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
         <link rel="stylesheet" href="../styling/general.css">
         <link rel="stylesheet" href="../styling/contact.css">
+        <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+        <script src="../script/general.js" defer></script>
     </head>
     <body>
-        <header>
-            <div class="logo-container">
-                <a href="index.html">
-                    <img src="../images/never.png" alt="Never" class="header-logo">
-                    <h1>Never</h1>
-                </a>
-            </div>
-            <nav>
-                <a href="index.html">about us</a>
-                <a href="members.html">members</a>
-                <a href="audition.html">audition</a>
-                <a href="contact.html">contact us</a>
-            </nav>
-        </header>
+        <header></header>
         <main class="main-container">
-            <h3>Contact Us</h3>
+            <h3 class="page-title">Contact Us</h3>
+            <hr class="title-divider">
             <p>Before emailing us, please refer to the 
                 <a class="faq-link" href="faq.html">FAQ</a>
                 to find answers to the most commonly asked questions</p>
@@ -47,16 +35,6 @@
                 <button>Send</button>
             </form>
         </main>
-        <footer>
-            <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
-                <i class="fab fa-youtube"></i>
-            </a>
-        </footer>
+        <footer></footer>
     </body>
 </html>
