--- a/faq.html
+++ b/faq.html
@@ -6,8 +6,9 @@
         <title>FAQ | Never Offical</title>
         <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
-        <link rel="stylesheet" href="../styling/general.css">
-        <link rel="stylesheet" href="../styling/faq.css">
+        <link rel="stylesheet" href="../styling/common/general.css">
+        <link rel="stylesheet" href="../styling/common/buttons.css">
+        <link rel="stylesheet" href="../styling/page/faq.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
         <script src="../script/general.js" defer></script>
     </head>
@@ -71,11 +72,11 @@
                     <a class="faq-link" href="https://www.instagram.com/neverofficialyyc/" target="_blank">@neverofficialyyc</a>
                 </p><br>
             </div>
-            <div>
+            <div class="button-container">
                 <p class="audition-intro">Interested in becoming a member?</p>
-                <button class="audition-button" type="button" onclick="window.location.href='auditionform.html'">Apply Now</button>
+                <button class="audition-button stylized-button" type="button" onclick="window.location.href='auditionform.html'">Apply Now</button>
             </div>
         </main>
-        <footer></footer>
+        <footer class="footer-space"></footer>
     </body>
 </html>
