--- a/index.html
+++ b/index.html
@@ -6,33 +6,30 @@
         <title>Never Offical</title>
         <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
-        <link rel="stylesheet" href="../styling/general.css">
-        <link rel="stylesheet" href="../styling/index.css">
+        <link rel="stylesheet" href="../styling/common/general.css">
+        <link rel="stylesheet" href="../styling/page/index.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
         <script src="../script/general.js" defer></script>
     </head>
     <body class="fade">
         <header></header>
         <main>
-            <div class="introductions">
-                <h3 class="page-title">About Us</h3>
-                <hr class="title-divider">
-                <p>
-                    Formed in 2015, <em>Never</em> is a K-Pop cover dance performance crew based in Calgary, AB
-                </p>
-                <p>
-                    <em>NE</em> stands "any" <br><br>
-                    <em>VER</em> means "version"<br><br>
-                    We come together to create "any version" of various dance performances in different styles. 
-                    Just like how fast the moon phases, our dancers adapt and learn quickly 
-                </p>
-                <p>Check out some of our lastest covers!</p>
-            </div>
-            <div class="iframe-container">
-                <iframe width="160" height="90" src="https://www.youtube.com/embed/3rMyNU3bGEU"
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-                </iframe>
+            <div class="main-container">
+                <div class="introduction-container">
+                    <h4>Check out our lastest cover!</h4>
+                </div>
+                <div class="iframe-container" container-no="1">
+                    <iframe width="160" height="90" src="https://www.youtube.com/embed/3rMyNU3bGEU?"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <!-- <div class="iframe-container">
+                    <iframe width="160" height="90" src="https://www.youtube.com/embed/gzQQVkmT810"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="iframe-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/T_PTUKFxhqQ" 
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div> -->
             </div>
         </main>
         <footer></footer>
