--- a/audition.html
+++ b/audition.html
@@ -6,27 +6,35 @@
         <title>Audition | Never Official</title>
         <link rel="icon" href="../images/logos/never-white-circle.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada+One">
-        <link rel="stylesheet" href="../styling/general.css">
-        <link rel="stylesheet" href="../styling/audition.css">
+        <link rel="stylesheet" href="../styling/common/general.css">
+        <link rel="stylesheet" href="../styling/common/buttons.css">
+        <link rel="stylesheet" href="../styling/common/links.css">
+        <link rel="stylesheet" href="../styling/page/audition.css">
         <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
         <script src="../script/general.js" defer></script>
     </head>
     <body class="fade">
         <header></header>
-        <main class="main-container">
-            <h3 class="page-title">Audition</h3>
-            <hr class="title-divider">
-            <p>We are always looking for new members!</p><br>
-            <p>Before applying, check out our 
-                <a class="faq-link" href="faq.html">FAQ</a>!
-            </p><br>
-            <p><b>Minimum Requirement</b></p>
-            <p>You will be required to submit a video clip of you dancing</p>
-            <p>must be at least 1 minute</p>
-            <div>
-                <button class="apply-button" onclick="window.location.href='auditionform.html'">apply now</button>
-            </div><br>
-            <img class="studio-pic" src="./images/studio.jpg">
+        <main>
+            <div class="main-container">
+                <div class="main-wrapper">
+                    <h3 class="page-title">Audition</h3>
+                    <hr class="title-divider">
+                    <p>We are always looking for new members!</p>
+                    <p>Before applying, check out our 
+                        <a class="faq-link text-link" href="faq.html">FAQ</a>!
+                    </p><br><br>
+                    <p><b>Minimum Requirement</b></p>
+                    <p>You will be required to submit a video clip of you dancing</p>
+                    <p>must be at least 1 minute</p>
+                    <div class="button-container">
+                        <button class="audition-button stylized-button" onclick="window.location.href='auditionform.html'">apply now</button>
+                    </div><br>
+                    <div class="picture-wrapper">
+                        <img class="studio-pic" src="./images/studio.jpg">
+                    </div>
+                </div>
+            </div>
         </main>
         <footer></footer>
     </body>
